--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <header>
   <nav>
     <div class="nav-wrap">
+      <div class="logo-and-btn">
       <div class="logo">
         <img src="IMG/IMAGE.svg" alt="Logo">
       </div>
       <!-- Burger menu button for small screens -->
       <button class="burger-menu" aria-label="Toggle menu">☰</button>
+      <div class="nav-btn">
       <ul class="nav-links" >
         <li><a aria-label="home" href="#home">Home</a></li>
         <li><a aria-label="features" href="#features">Features</a></li>
@@ -26,6 +28,8 @@
         <li><a aria-label="about us" href="#about">About us</a></li>
         <li><a aria-label="contact" href="#contact">Contact</a></li>
       </ul>
+      </div>
+      </div>
       <div class="nav-buttons">
         <a class="secondary-normal-button btn" href="#learn-more">Learn More</a>
         <a class="primary-normal-button  btn" href="#see-pricing">See Pricing</a>
@@ -37,6 +41,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-content">
+      <img src="IMG/content.svg">
       <h1>Discover the Future</h1>
       <p>Innovate and grow with our platform. Start today!</p>
       <div class="hero-buttons">
